--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="mainpage3">
         <div class="mp-default-text">
-            <span class="applewatchlogo"><img src="/image3-1.png" alt="apple watch series"></span>
+            <span class="applewatchlogo"><img src="image3-1.png" alt="apple watch series"></span>
             <span class="mp3desc">Smarter. Brighter. Mightier.</span>
             <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
         </div>
@@ -102,7 +102,7 @@
     <div class="mainpage4">
         <div class="promo1 grid-item">
             <div class="mp-default-text">
-                <span class="appletradein"><img src="/4-1-1.png" alt="watch ultra-2"></span>
+                <span class="appletradein"><img src="4-1-1.png" alt="watch ultra-2"></span>
                 <span>Next-level Adventure.</span>
                 <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
             </div>
@@ -111,7 +111,7 @@
         <div class="promo2 grid-item">
             <div class="mp-default-text">
                 <span class="wwdc23">
-                    <img src="/images/4-2-1.png" alt="wwdc23"></span>
+                    <img src="4-2-1.png" alt="wwdc23"></span>
                 <span class="wwdc23text">A first Apple Watch.</span>
                 <span class="wwdc23text"> And Apple</span>
                 <div class="mainpagelink"><a href="">Learn more > </a><a href=""> Watch the film ></a></div>
@@ -121,7 +121,7 @@
 
         <div class="promo3 grid-item">
             <div class="mp-default-text">
-                <img src="/promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
+                <img src="promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
                 <span>A great deal to love.</span>
                 <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
             </div>
@@ -141,7 +141,7 @@
 
         <div class="promo5 grid-item">
             <div class="mp-default-text">
-               <span class="macbook"><img src="/promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
+               <span class="macbook"><img src="promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
                 <span id="mactitle">MacBook Air 15"</span>
                 <span>Impressively big. Impossibly thin.</span>
                 <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
