--- a/index.html
+++ b/index.html
@@ -161,11 +161,13 @@
 
     </div>
 
-    <footer>
-        <div class="footertext1"><span>A project by <a href="#">Snehal Niphade
-                </a><br /><br /></span>
-            </div>
-    </footer>
+  <footer>
+        <div class="footertext1"><span style="margin-left: 10%;">A project by Snehal Niphade<br /><br /></span>
+              <p class="footer">Instant savings, otherwise referred to as instant cashback on the Apple Store Online, is available with the purchase of an eligible product for qualifying HDFC Bank Credit Cards and EasyEMI Credit Cards only. Minimum transaction value of ₹10001.00 applies. Click here to see instant savings amounts and eligible devices. Instant savings is available for up to two orders per rolling 90-day period with an eligible card. Card eligibility is subject to terms and conditions between you and your card-issuing bank. Total transaction value is calculated after any trade-in credit or eligible discount applied. Any subsequent order adjustment(s) or cancellation(s) may result in instant savings being recalculated, and any refund may be adjusted to account for instant savings clawback; this may result in no refund being made to you. Offer may be revised or withdrawn at any time without any prior notice. Terms and conditions apply. Offer cannot be combined with Apple Store for Education or Corporate Employee Purchase Plan pricing. Multiple separate orders cannot be combined for instant savings.
+              A subscription is required for Apple TV+*
+            </p>
+        </div>
+      </footer>
 </body>
 
 
