--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div class="mainpage3">
         <div class="mp-default-text">
-            <span class="applewatchlogo"><img src="/image3-1.png" alt="apple watch series"></span>
+            <span class="applewatchlogo"><img src="image3-1.png" alt="apple watch series"></span>
             <span class="mp3desc">Smarter. Brighter. Mightier.</span>
             <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
         </div>
@@ -113,7 +113,7 @@
     <div class="mainpage4">
         <div class="promo1 grid-item">
             <div class="mp-default-text">
-                <span class="appletradein"><img src="/4-1-1.png" alt="watch ultra-2"></span>
+                <span class="appletradein"><img src="4-1-1.png" alt="watch ultra-2"></span>
                 <span>Next-level Adventure.</span>
                 <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
             </div>
@@ -122,7 +122,7 @@
         <div class="promo2 grid-item">
             <div class="mp-default-text">
                 <span class="wwdc23">
-                    <img src="/images/4-2-1.png" alt="wwdc23"></span>
+                    <img src="4-2-1.png" alt="wwdc23"></span>
                 <span class="wwdc23text">A first Apple Watch.</span>
                 <span class="wwdc23text"> And Apple</span>
                 <div class="mainpagelink"><a href="">Learn more > </a><a href=""> Watch the film ></a></div>
@@ -132,7 +132,7 @@
 
         <div class="promo3 grid-item">
             <div class="mp-default-text">
-                <img src="/promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
+                <img src="promo_logo_apple_watch_se__b85vr9ri02gi_medium.png" alt="wwdc23"></span>
                 <span>A great deal to love.</span>
                 <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
             </div>
@@ -152,21 +152,33 @@
 
         <div class="promo5 grid-item">
             <div class="mp-default-text">
-                <span class="macbook"><img src="/promo_logo_apple_watch_se__b85vr9ri02gi_medium.png"
-                        alt="wwdc23"></span>
-                <span id="mactitle">MacBook Air 15"</span>
+                <span class="macbook">
+                    <img src="promo_logo_apple_watch_se__b85vr9ri02gi_medium.png"
+                        alt="wwdc23">
+                </span>
+                <span id="mactitle">
+                    MacBook Air 15"
+                </span>
                 <span>Impressively big. Impossibly thin.</span>
-                <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
+                <div class="mainpagelink"><a href="">
+                    Learn More ></a>
+                    <a href="">Buy ></a></div>
             </div>
 
         </div>
         <div class="promo6 grid-item">
             <div class="mp-default-text">
-                <span class="applewatchcontainer"><img
+                <span class="applewatchcontainer">
+                    <img
                         src="https://www.apple.com/v/home/az/images/logos/apple-watch-ultra/promo_logo_apple_watch_ultra__ebzaahharnue_large.png"
-                        alt="apple watch ultra"></span>
-                <span>Adventure awaits.</span>
-                <div class="mainpagelink"><a href="">Learn More ></a> <a href="">Buy ></a></div>
+                        alt="apple watch ultra">
+                </span>
+                <span>
+                    Adventure awaits.
+                </span>
+                <div class="mainpagelink"><a href="">
+                    Learn More >
+                </a> <a href="">Buy ></a></div>
             </div>
         </div>
     </div>
